# gitingest

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
src/gitingest/: __init__.py  cli.py  cloning.py  config.py  entrypoint.py  ingestion.py  output_formatters.py  query_parsing.py
src/gitingest/schemas/: __init__.py  filesystem_schema.py  ingestion_schema.py
src/gitingest/utils/: exceptions.py  file_utils.py  git_utils.py  ignore_patterns.py  ingestion_utils.py  notebook_utils.py  path_utils.py  query_parser_utils.py  timeout_wrapper.py
src/server/: main.py  query_processor.py  server_config.py  server_utils.py
src/server/routers/: __init__.py  download.py  dynamic.py  index.py
src/server/templates/: api.jinja  base.jinja  git.jinja  index.jinja
src/server/templates/components/: footer.jinja  git_form.jinja  navbar.jinja  result.jinja
src/static/: robots.txt
src/static/js/: utils.js
tests/: .pylintrc  conftest.py  test_cli.py  test_flow_integration.py  test_ingestion.py  test_notebook_utils.py  test_repository_clone.py
tests/query_parser/: test_git_host_agnostic.py  test_query_parser.py
